App. version 5.0.0 -- Migrate from Spring Boot 2.7.x to 3.0.x -- First version to compile and run the login page. WIP to get to latest Spring Boot