@@ -1,23 +1,23 @@
 package com.poivredesiles.fundraising.service.dto;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.poivredesiles.fundraising.imports.ImportsUtils;
+import lombok.Data;
+
+import java.io.Serial;
 import java.io.Serializable;
 import java.time.Instant;
 import java.time.LocalDate;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.poivredesiles.fundraising.imports.ImportsUtils;
-
-import lombok.Data;
 
 /**
  * A DTO for the {@link com.poivredesiles.fundraising.domain.PdiCampaign} entity.
  */
 @Data
 public class PdiCampaignDTO implements Serializable {
-    
-    /**
+	/**
 	 * 
 	 */
+	@Serial
 	private static final long serialVersionUID = 1L;
 
 	private Long id;
@@ -62,18 +62,18 @@ public class PdiCampaignDTO implements Serializable {
     
     @JsonProperty("campaignInfo")
     public String getCampaignInfo() {
-    	return String.format("%d %s - %s", organizationNum, organizationName, project);
+    	return "%d %s - %s".formatted(organizationNum, organizationName, project);
     }
     
     @JsonProperty("orderHeaderFilename")
     public String getOrderHeaderFilename() {
         LocalDate now = ImportsUtils.convertToLocalDate(Instant.now());
-    	return String.format("%d_enteteBC_%s.csv", number, ImportsUtils.formatLocalDate(now, "dd-MM-yyyy"));
+    	return "%d_enteteBC_%s.csv".formatted(number, ImportsUtils.formatLocalDate(now, "dd-MM-yyyy"));
     }
     
     @JsonProperty("orderDetailFilename")
     public String getOrderDetailFilename() {
         LocalDate now = ImportsUtils.convertToLocalDate(Instant.now());
-    	return String.format("%d_detailBC_%s.csv", number, ImportsUtils.formatLocalDate(now, "dd-MM-yyyy"));
+    	return "%d_detailBC_%s.csv".formatted(number, ImportsUtils.formatLocalDate(now, "dd-MM-yyyy"));
     }
 }
